Fix comment spacing

--- a/src/components/CommentComponent.scss
+++ b/src/components/CommentComponent.scss
@@ -1,13 +1,14 @@
 .Comment {
   display: grid;
-  grid-template-columns: 1fr 0.8fr 18fr;
+  grid-template-columns: 1fr 1fr 18fr;
+  column-gap: 1em;
   align-items: center;
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
   height: 60px;
 
   img {
     max-width: 100%;
-    margin-left: 0.2em;
+    // margin-left: 0.2em;
   }
 
   .commentContentContainer {
@@ -15,7 +16,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin-left: 1em;
+    // margin-left: 1em;
 
     h2 {
       font-weight: 700;
