--- a/src/components/Votes.scss
+++ b/src/components/Votes.scss
@@ -9,7 +9,7 @@
   p {
     padding: 0;
     margin: 0 !important;
-    font-size: 100%;
+    font-size: 0.8vw;
   }
   span {
     font-size: 1.5em;
